[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dash-cache"
version = "0.1.0"
description = "A modern, interactive dashboard built with Dash that connects to Databricks SQL"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dash",
    "plotly",
    "pandas",
    "duckdb",
    "databricks-sdk",
    "databricks-sql-connector",
    "pyarrow",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.optional-dependencies]
dev = [
    "ruff",
    "isort",
    "mypy",
]

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]



[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["dash_cache"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = false 